--- a/notebook_nba.ipynb
+++ b/notebook_nba.ipynb
@@ -9,22 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting nba_api\n",
-      "  Downloading nba_api-1.6.1-py3-none-any.whl.metadata (5.5 kB)\n",
-      "Collecting numpy<2.0.0,>=1.22.2 (from nba_api)\n",
-      "  Using cached numpy-1.26.4-cp313-cp313-linux_x86_64.whl\n",
+      "Requirement already satisfied: nba_api in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (1.6.1)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.22.2 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from nba_api) (1.26.4)\n",
       "Requirement already satisfied: requests<3.0.0,>=2.32.3 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from nba_api) (2.32.3)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from requests<3.0.0,>=2.32.3->nba_api) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from requests<3.0.0,>=2.32.3->nba_api) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from requests<3.0.0,>=2.32.3->nba_api) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from requests<3.0.0,>=2.32.3->nba_api) (2024.8.30)\n",
-      "Downloading nba_api-1.6.1-py3-none-any.whl (279 kB)\n",
-      "Installing collected packages: numpy, nba_api\n",
-      "  Attempting uninstall: numpy\n",
-      "    Found existing installation: numpy 2.2.0\n",
-      "    Uninstalling numpy-2.2.0:\n",
-      "      Successfully uninstalled numpy-2.2.0\n",
-      "Successfully installed nba_api-1.6.1 numpy-1.26.4\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/bigdata/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages (from requests<3.0.0,>=2.32.3->nba_api) (2024.8.30)\n"
      ]
     }
    ],
@@ -1490,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1498,16 +1489,16 @@
       "text/plain": [
        "{'meta': {'version': 1,\n",
        "  'request': 'https://nba-prod-us-east-1-mediaops-stats.s3.amazonaws.com/NBA/liveData/scoreboard/todaysScoreboard_00.json',\n",
-       "  'time': '2024-12-17 05:52:55.5255',\n",
+       "  'time': '2024-12-18 06:24:05.245',\n",
        "  'code': 200},\n",
        " 'scoreboard': {'gameDate': '2024-12-17',\n",
        "  'leagueId': '00',\n",
        "  'leagueName': 'National Basketball Association',\n",
        "  'games': [{'gameId': '0062400001',\n",
        "    'gameCode': '20241217/MILOKC',\n",
-       "    'gameStatus': 1,\n",
-       "    'gameStatusText': '8:30 pm ET',\n",
-       "    'period': 0,\n",
+       "    'gameStatus': 3,\n",
+       "    'gameStatusText': 'Final',\n",
+       "    'period': 4,\n",
        "    'gameClock': '',\n",
        "    'gameTimeUTC': '2024-12-18T01:30:00Z',\n",
        "    'gameEt': '2024-12-17T20:30:00Z',\n",
@@ -1520,57 +1511,56 @@
        "    'seriesConference': '',\n",
        "    'poRoundDesc': '',\n",
        "    'gameSubtype': 'in-season-knockout',\n",
-       "    'isNeutral': True,\n",
        "    'homeTeam': {'teamId': 1610612760,\n",
        "     'teamName': 'Thunder',\n",
        "     'teamCity': 'Oklahoma City',\n",
        "     'teamTricode': 'OKC',\n",
-       "     'wins': 20,\n",
-       "     'losses': 5,\n",
-       "     'score': 0,\n",
+       "     'wins': 0,\n",
+       "     'losses': 1,\n",
+       "     'score': 81,\n",
        "     'seed': 1,\n",
        "     'inBonus': None,\n",
-       "     'timeoutsRemaining': 0,\n",
-       "     'periods': [{'period': 1, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 2, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 3, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 4, 'periodType': 'REGULAR', 'score': 0}]},\n",
+       "     'timeoutsRemaining': 1,\n",
+       "     'periods': [{'period': 1, 'periodType': 'REGULAR', 'score': 28},\n",
+       "      {'period': 2, 'periodType': 'REGULAR', 'score': 22},\n",
+       "      {'period': 3, 'periodType': 'REGULAR', 'score': 14},\n",
+       "      {'period': 4, 'periodType': 'REGULAR', 'score': 17}]},\n",
        "    'awayTeam': {'teamId': 1610612749,\n",
        "     'teamName': 'Bucks',\n",
        "     'teamCity': 'Milwaukee',\n",
        "     'teamTricode': 'MIL',\n",
-       "     'wins': 14,\n",
-       "     'losses': 11,\n",
-       "     'score': 0,\n",
+       "     'wins': 1,\n",
+       "     'losses': 0,\n",
+       "     'score': 97,\n",
        "     'seed': 1,\n",
        "     'inBonus': None,\n",
-       "     'timeoutsRemaining': 0,\n",
-       "     'periods': [{'period': 1, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 2, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 3, 'periodType': 'REGULAR', 'score': 0},\n",
-       "      {'period': 4, 'periodType': 'REGULAR', 'score': 0}]},\n",
-       "    'gameLeaders': {'homeLeaders': {'personId': 0,\n",
-       "      'name': '',\n",
-       "      'jerseyNum': '',\n",
-       "      'position': '',\n",
+       "     'timeoutsRemaining': 1,\n",
+       "     'periods': [{'period': 1, 'periodType': 'REGULAR', 'score': 27},\n",
+       "      {'period': 2, 'periodType': 'REGULAR', 'score': 24},\n",
+       "      {'period': 3, 'periodType': 'REGULAR', 'score': 26},\n",
+       "      {'period': 4, 'periodType': 'REGULAR', 'score': 20}]},\n",
+       "    'gameLeaders': {'homeLeaders': {'personId': 1628392,\n",
+       "      'name': 'Isaiah Hartenstein',\n",
+       "      'jerseyNum': '55',\n",
+       "      'position': 'C-F',\n",
        "      'teamTricode': 'OKC',\n",
        "      'playerSlug': None,\n",
-       "      'points': 0,\n",
-       "      'rebounds': 0,\n",
-       "      'assists': 0},\n",
-       "     'awayLeaders': {'personId': 0,\n",
-       "      'name': '',\n",
-       "      'jerseyNum': '',\n",
-       "      'position': '',\n",
+       "      'points': 16,\n",
+       "      'rebounds': 12,\n",
+       "      'assists': 2},\n",
+       "     'awayLeaders': {'personId': 203507,\n",
+       "      'name': 'Giannis Antetokounmpo',\n",
+       "      'jerseyNum': '34',\n",
+       "      'position': 'F',\n",
        "      'teamTricode': 'MIL',\n",
        "      'playerSlug': None,\n",
-       "      'points': 0,\n",
-       "      'rebounds': 0,\n",
-       "      'assists': 0}},\n",
+       "      'points': 26,\n",
+       "      'rebounds': 19,\n",
+       "      'assists': 10}},\n",
        "    'pbOdds': {'team': None, 'odds': 0.0, 'suspended': 0}}]}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,69 +1577,6 @@
     "# dictionary\n",
     "# games.get_dict()\n",
     "dict(juegos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0062400001\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "BoxScore.__init__() missing 1 required positional argument: 'game_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m \u001b[38;5;28mid\u001b[39m \u001b[38;5;129;01min\u001b[39;00m game_ids:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mid\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m     Stats \u001b[38;5;241m=\u001b[39m \u001b[43mboxscore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBoxScore\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m     Stats\u001b[38;5;241m.\u001b[39mget_json()\n",
-      "\u001b[0;31mTypeError\u001b[0m: BoxScore.__init__() missing 1 required positional argument: 'game_id'"
-     ]
-    }
-   ],
-   "source": [
-    "game_ids = [game['gameId'] for game in juegos['scoreboard']['games']]\n",
-    "#print(game_ids)\n",
-    "\n",
-    "for id in game_ids:\n",
-    "    print(id)\n",
-    "    Stats = boxscore.BoxScore()\n",
-    "    Stats.get_json()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Stats \u001b[38;5;241m=\u001b[39m \u001b[43mboxscore\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBoxScore\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0062400000\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m Stats\u001b[38;5;241m.\u001b[39mget_json()\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages/nba_api/live/nba/endpoints/boxscore.py:321\u001b[0m, in \u001b[0;36mBoxScore.__init__\u001b[0;34m(self, game_id, proxy, headers, timeout, get_request)\u001b[0m\n\u001b[1;32m    319\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimeout \u001b[38;5;241m=\u001b[39m timeout\n\u001b[1;32m    320\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m get_request:\n\u001b[0;32m--> 321\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_request\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages/nba_api/live/nba/endpoints/boxscore.py:331\u001b[0m, in \u001b[0;36mBoxScore.get_request\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    323\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_request\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    324\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnba_response \u001b[38;5;241m=\u001b[39m NBALiveHTTP()\u001b[38;5;241m.\u001b[39msend_api_request(\n\u001b[1;32m    325\u001b[0m         endpoint\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mendpoint_url\u001b[38;5;241m.\u001b[39mformat(game_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgame_id),\n\u001b[1;32m    326\u001b[0m         parameters\u001b[38;5;241m=\u001b[39m{},\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    329\u001b[0m         timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimeout,\n\u001b[1;32m    330\u001b[0m     )\n\u001b[0;32m--> 331\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages/nba_api/live/nba/endpoints/boxscore.py:334\u001b[0m, in \u001b[0;36mBoxScore.load_response\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_response\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 334\u001b[0m     data_sets \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnba_response\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    335\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgame\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data_sets:\n\u001b[1;32m    336\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgame \u001b[38;5;241m=\u001b[39m Endpoint\u001b[38;5;241m.\u001b[39mDataSet(data\u001b[38;5;241m=\u001b[39mdata_sets[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgame\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/site-packages/nba_api/library/http.py:42\u001b[0m, in \u001b[0;36mNBAResponse.get_dict\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_dict\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 42\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_response\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/json/decoder.py:345\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    340\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[1;32m    341\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    342\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    343\u001b[0m \n\u001b[1;32m    344\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 345\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    346\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[1;32m    347\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
-      "File \u001b[0;32m~/miniconda3/envs/Trabajo_SBD/lib/python3.13/json/decoder.py:363\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    361\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_once(s, idx)\n\u001b[1;32m    362\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m--> 363\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
-     ]
-    }
-   ],
-   "source": [
-    "Stats = boxscore.BoxScore('0062400001')\n",
-    "Stats.get_json()"
    ]
   }
  ],
